--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
                 </div> 
                     <div id="about">
                         <h3 class="li" >About Me</h3>
-                            <p class="li">
+                            <p class="li" id= "text">
                         I decided to pursue web development after years of being an entrepreneur. Web development being the future, I wanted to have the know-how to compete in the market.       
-                            </p> >
+                            </p> 
                     </div>
                 <div class= "li" id="contact">
                     <h3 class="li">Contact</h3>
                     <ul>
-                        <li>Marcostrejo23@gmail.com</li>
+                        <li> <a href="mailto: marcostrejo23@gmail.com"></a>Email Me</li>
                     </ul>
                 </div>
             </div>
