--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>My First Portfolio</title>
     <link rel="stylesheet" href="./style.css">
 
@@ -38,6 +40,6 @@
     
     </div>
     </main>
-</html>
-
+    
 </body>
+</html>
