--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <div id="about">
                         <h3 class="li" >About Me</h3>
                             <p class="li" id= "text">
-                        I decided to pursue web development after years of being an entrepreneur. Web development being the future, I wanted to have the know-how to compete in the market.       
+                        I decided to pursue web development after years of being an entrepreneur. Web development being the future,<br> I wanted to have the know-how to compete in the market.       
                             </p> 
                     </div>
                 <div class= "li" id="contact">
