edits to contact information

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>My First Portfolio</title>
     <link rel="stylesheet" href="./style.css">
@@ -33,7 +34,8 @@
                 <div class= "li" id="contact">
                     <h3 class="li">Contact</h3>
                     <ul>
-                        <li> <a href="mailto: marcostrejo23@gmail.com"></a>Email Me</li>
+                        <li> <a href="mailto:marcostrejo23@gmail.com"></a>Email Me</li>
+                        <li> <a href="tel:+14257664561"></a>Call Me</li>
                     </ul>
                 </div>
             </div>
