updating my about me

--- a/index.html
+++ b/index.html
@@ -28,8 +28,11 @@
                     <div id="about">
                         <h3 class="li" >About Me</h3>
                             <p class="li" id= "text">
-                        I decided to pursue web development after years of being an entrepreneur. Web development being the future,<br> I wanted to have the know-how to compete in the market.       
+                        I decided to pursue web development after years of being an entrepreneur. Web development being the future, I wanted to have the know-how to compete in the market.       
                             </p> 
+                            <p>
+                                When I'm not pursuing the knowledge of web development, I'm going crazy for Seattle sports, out in the woods looking for the next best photography spot, or at the cinemas keeping up with the latest films.
+                            </p>
                     </div>
                 <div class= "li" id="contact">
                     <h3 class="li">Contact</h3>
