--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>My First Portfolio</title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./reset.css">
 
 </head>
 <body class="body">
@@ -18,6 +19,7 @@
     </header>
 
     <main>
+
     <div class="container">
             <img id= "img" src="https://lh3.googleusercontent.com/oEM2sJeG41Ty4MpWbdOu7CfTEV4tIkWEgpsfJn0R-bTjVuvTTDyImxXFEHSJjOxZxJH1tP1AvmGRhT00WZKNI7yBCYxb9p3K83A26aqn76kgZx6DFADsn0DVP_g4xlBV6F3ka0ralzJkGOAv-YWVQk3Fl337ou2HDNFsXS4Mzjadr_45WnPQtW9INaIBOE6EnnONC4Z2Rv_X2Is0kN0pML7Du-3ithhiL1tvzpsxHPpT-vkSTarywBvQYtN_ha63Oz_c-s3kTwRrhuYyEuHnbZtwhEQ0VGmOxRnbId2OC6oB74uOW5MKpnWhn6CLgYe_SLKVSaXXx2N5nS2ajrrpeUSA6EMedwmTygL_CM-kL_KdnmQxViBVE6xAXVZEyPGIt9b6TNlmKwlmmvy4YeX72caDYoOSggtl11qBnQ_DuDMlOJx9BmH4Q97qz-YucGFQhMALdJnBRGTN_WCg9esUCSMCReqoDdGEdcDueeqaM-yzVpTwqNaMGSdercCXd1VXtiSYS1RrJD_mni7l-cQ8pLHc-0olmCrglf36Epx530gd0qZJopcGfhBUeJ065kQvM_9fjZmsPNj6YH_6SdjSUIcqGT1GQoW5suq8EFol9Vwzrj4z5mGvDfkyPemXM19fsUE9A9yPfWhEncB7hEodOfuS4XdMn2SfvXri3KFIqnyG5-8UtXBk6UXoAG6xbJA4K4MvI01JtQfTrJayNSt7rflj=w565-h448-no?authuser=0" alt="Two boys and a kite">
 <br>        
@@ -36,15 +38,14 @@
                     </div>
                 <div class= "li" id="contact">
                     <h3 class="li">Contact</h3>
-                    <ul>
-                        <li> <a href="mailto:marcostrejo23@gmail.com"></a>Email Me</li>
-                        <li> <a href="tel:+14257664561"></a>Call Me</li>
-                    </ul>
+                        <p> <a href="mailto:marcostrejo23@gmail.com"></a>Email Me</p>
+                        <p> <a href="tel:+14257664561"></a>Call Me</p>
                 </div>
             </div>
-    
     </div>
+
     </main>
     
 </body>
+
 </html>
