changes to header

--- a/index.html
+++ b/index.html
@@ -8,18 +8,17 @@
     <link rel="stylesheet" href="./reset.css">
 
 </head>
+
 <body class="body">
-    <header id="header">
-        <h1 id="title">Marcos Manuel Trejo</h1>
-        <nav class="nav">
-            <a href="#about">About Me</a>
-            <a href="#work">My Work</a>
-            <a href="#contact">Contact</a>
-        </nav>
-    </header>
-
+<header id="header">
+    <h1 id="title">Marcos Manuel Trejo</h1>
+    <nav class="nav">
+        <a href="#about">About Me</a>
+        <a href="#work">My Work</a>
+        <a href="#contact">Contact</a>
+    </nav>
+</header>
     <main>
-
     <div class="container">
             <img id= "img" src="https://lh3.googleusercontent.com/oEM2sJeG41Ty4MpWbdOu7CfTEV4tIkWEgpsfJn0R-bTjVuvTTDyImxXFEHSJjOxZxJH1tP1AvmGRhT00WZKNI7yBCYxb9p3K83A26aqn76kgZx6DFADsn0DVP_g4xlBV6F3ka0ralzJkGOAv-YWVQk3Fl337ou2HDNFsXS4Mzjadr_45WnPQtW9INaIBOE6EnnONC4Z2Rv_X2Is0kN0pML7Du-3ithhiL1tvzpsxHPpT-vkSTarywBvQYtN_ha63Oz_c-s3kTwRrhuYyEuHnbZtwhEQ0VGmOxRnbId2OC6oB74uOW5MKpnWhn6CLgYe_SLKVSaXXx2N5nS2ajrrpeUSA6EMedwmTygL_CM-kL_KdnmQxViBVE6xAXVZEyPGIt9b6TNlmKwlmmvy4YeX72caDYoOSggtl11qBnQ_DuDMlOJx9BmH4Q97qz-YucGFQhMALdJnBRGTN_WCg9esUCSMCReqoDdGEdcDueeqaM-yzVpTwqNaMGSdercCXd1VXtiSYS1RrJD_mni7l-cQ8pLHc-0olmCrglf36Epx530gd0qZJopcGfhBUeJ065kQvM_9fjZmsPNj6YH_6SdjSUIcqGT1GQoW5suq8EFol9Vwzrj4z5mGvDfkyPemXM19fsUE9A9yPfWhEncB7hEodOfuS4XdMn2SfvXri3KFIqnyG5-8UtXBk6UXoAG6xbJA4K4MvI01JtQfTrJayNSt7rflj=w565-h448-no?authuser=0" alt="Two boys and a kite">
 <br>        
@@ -32,7 +31,7 @@
                             <p class="li" id= "text">
                         I decided to pursue web development after years of being an entrepreneur. Web development being the future, I wanted to have the know-how to compete in the market.       
                             </p> 
-                            <p>
+                            <p class="li" id= "text">
                                 When I'm not pursuing the knowledge of web development, I'm going crazy for Seattle sports, out in the woods looking for the next best photography spot, or at the cinemas keeping up with the latest films.
                             </p>
                     </div>
