--- a/index.html
+++ b/index.html
@@ -19,7 +19,12 @@
 </header>
     <main>
     <div class="container">
-            <img id= "img" src="https://lh3.googleusercontent.com/oEM2sJeG41Ty4MpWbdOu7CfTEV4tIkWEgpsfJn0R-bTjVuvTTDyImxXFEHSJjOxZxJH1tP1AvmGRhT00WZKNI7yBCYxb9p3K83A26aqn76kgZx6DFADsn0DVP_g4xlBV6F3ka0ralzJkGOAv-YWVQk3Fl337ou2HDNFsXS4Mzjadr_45WnPQtW9INaIBOE6EnnONC4Z2Rv_X2Is0kN0pML7Du-3ithhiL1tvzpsxHPpT-vkSTarywBvQYtN_ha63Oz_c-s3kTwRrhuYyEuHnbZtwhEQ0VGmOxRnbId2OC6oB74uOW5MKpnWhn6CLgYe_SLKVSaXXx2N5nS2ajrrpeUSA6EMedwmTygL_CM-kL_KdnmQxViBVE6xAXVZEyPGIt9b6TNlmKwlmmvy4YeX72caDYoOSggtl11qBnQ_DuDMlOJx9BmH4Q97qz-YucGFQhMALdJnBRGTN_WCg9esUCSMCReqoDdGEdcDueeqaM-yzVpTwqNaMGSdercCXd1VXtiSYS1RrJD_mni7l-cQ8pLHc-0olmCrglf36Epx530gd0qZJopcGfhBUeJ065kQvM_9fjZmsPNj6YH_6SdjSUIcqGT1GQoW5suq8EFol9Vwzrj4z5mGvDfkyPemXM19fsUE9A9yPfWhEncB7hEodOfuS4XdMn2SfvXri3KFIqnyG5-8UtXBk6UXoAG6xbJA4K4MvI01JtQfTrJayNSt7rflj=w565-h448-no?authuser=0" alt="Two boys and a kite">
+        <div class="images">
+            <img class="img" id="pic" src="./images/My Photo.png" width =50 height= 50 alt="picture of Marcos Trejo">
+            <img class = "img" src="./images/PasswordGenerator.png" alt="Password Generator"> 
+            <img class= "img" src="./images/WeatherDashboard.png" alt="Weather Dashboard">
+            <img class="img" src="./images/WorkDayScheduler.png" alt="Workday Scheduler">
+        </div>
 <br>        
             <div class="info">
                 <div class="content">
