changes to hover and contact info working

--- a/index.html
+++ b/index.html
@@ -27,22 +27,22 @@
         </div>
 <br>        
             <div class="info">
-                <div class="content">
+                <div class="content" id="work">
                     <h3><a href="https://github.com/Marcostrejo23">Portfolio</a></h3>
                 </div> 
-                    <div class="content">
+                    <div class="content" id="about">
                         <h3>About Me</h3>
                             <p>
-                        I decided to pursue web development after years of being an entrepreneur. Web development being the future, I wanted to have the know-how to compete in the market.       
+                            I decided to pursue web development after years of being an entrepreneur. Web development being the future, I wanted to have the know-how to compete in the market.       
                             </p> 
                             <p>
-                                When I'm not pursuing the knowledge of web development, I'm going crazy for Seattle sports, out in the woods looking for the next best photography spot, or at the cinemas keeping up with the latest films.
+                             When I'm not pursuing the knowledge of web development, I'm going crazy for Seattle sports, out in the woods looking for the next best photography spot, or at the cinemas keeping up with the latest films.
                             </p>
                     </div>
-                <div class="content">
+                <div class="content" id="contact">
                     <h3>Contact</h3>
-                        <p> <a href="mailto:marcostrejo23@gmail.com"></a>Email Me</p>
-                        <p> <a href="tel:+14257664561"></a>Call Me</p>
+                        <p> <a href="mailto:marcostrejo23@gmail.com">Email Me</a></p>
+                        <p> <a href="tel:+14257664561">Call Me</a></p>
                 </div>
             </div>
     </div>
