--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <nav class="nav">
         <a href="#about">About Me</a>
         <a href="#work">My Work</a>
-        <a href="#contact">Contact</a>
+        <a href="#contact">Contact</a>  
     </nav>
 </header>
     <main>
@@ -29,6 +29,8 @@
             <div class="info">
                 <div class="content" id="work">
                     <h3><a href="https://github.com/Marcostrejo23">Portfolio</a></h3>
+                    <h3><a href="./images/Marcos Trejo Coding Resume.pdf">My Resume</a></h3>
+                    <h3><a href="https://www.linkedin.com/in/marcos-trejo-915923185/">My LinkedIn</a></h3>
                 </div> 
                     <div class="content" id="about">
                         <h3>About Me</h3>
