--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <main>
     <div class="container">
         <div class="images">
-            <a href="https://www.linkedin.com/in/marcos-trejo-915923185/"><img class="img" id="pic" src="./images/My Photo.png" width =500 height= 500 alt="picture of Marcos Trejo"></a>
+            <img class="img" id="pic" src="./images/My Photo.png" width =50 height= 50 alt="picture of Marcos Trejo">
             <img class = "img" src="./images/PasswordGenerator.png" alt="Password Generator">
             <img class= "img" src="./images/WeatherDashboard.png" alt="Weather Dashboard">
             <img class="img" src="./images/WorkDayScheduler.png" alt="Workday Scheduler">
